welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: not found: value setCouleur
	setCouleur(Color.YELLOW);
        ^FlowerPot:8: error: not found: value setCouleur
	setCouleur(c);
        ^